Bug 768035 - Allow overriding user agent based on window. r=bz